--- a/ali.html
+++ b/ali.html
@@ -3,12 +3,15 @@
     <title>
     الصحه الاولئ
 </title>
-<link rel="icon" href="./download.jpg"
-   </head>
-   <body>
+</head>
+<link rel="icon" href="./as.jpg"
+
+><body>
    <h1> علي حسين ابراهيم</h1>
 <h2> هذا موقعي الاول</h2>
 <p>لقوه الويب و اسخدام الويب في السنين القدامه</p>
+
+
 </body>
    
 </html>
