--- a/ali.html
+++ b/ali.html
@@ -1,21 +1,18 @@
-<html>
-<head></head>
-<title>
-الصفحه الاولئ
-</title>
-<link rel="icon" href=".as.jpg"
+<!DOCTYPE html>
 
+<head>
 
-><body>
+    <title>الصفحة الأولى</title>
+</head>
 
-<h1>علي حسين ابراهيم</h1>
+<body>
+  <h1> علي حسين ابراهيم</h1>
 <h2>هذا موقعي الاول</h2>
-<p>لقوه الويب و اسخدام الويب في السنين القدامه</p>
+<p>لقوه المسار في السنين القادمه</p>
 
+<a href="./ali2.html"> الصفحه الرائيسيه
+  <img src="./4850de49604597.5608607aaab6c.png"HTML LOGO" width="200px">
+><p>2/2/2022</p>
 </body>
 
-<a href="./ali2.html"> صفحتي الثانيه </a>
-<img src="./4850de49604597.5608607aaab6c.png" alt="HTML LOGO" width="200px">
-
-
-
+</html>
